# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import majorsRouter from "./majors";
 import chatRouter from "./chat";
 import meRouter from "./me";
 import myCollegesRouter from "./myColleges";
+import collegesRouter from "./colleges";
 import adminRouter from "./admin";
 
 const router: IRouter = Router();
@@ -13,6 +14,7 @@ router.use(majorsRouter);
 router.use(chatRouter);
 router.use(meRouter);
 router.use(myCollegesRouter);
+router.use(collegesRouter);
 router.use(adminRouter);
 
 export default router;
